# android_freetype

./: README.md
freetype-2.9.1/: CMakeLists.txt
freetype-2.9.1/builds/cmake/: testbuild.sh
